--- a/Day22 Follow Along Links/index.html
+++ b/Day22 Follow Along Links/index.html
@@ -50,16 +50,14 @@
       const triggers = document.querySelectorAll("a");
       const highlight = document.createElement("span");
       highlight.classList.add("highlight");
-      document.body.append(highlight);
-
+      document.body.appendChild(highlight);
       function highlightLink() {
-        const linkCords = this.getBoundingClientRect();
-        console.log(linkCords);
+        const linkCoords = this.getBoundingClientRect();
         const coords = {
           width: linkCoords.width,
           height: linkCoords.height,
-          top: linkCords.top + window.scrollY,
-          left: linkCords.left + window.scrollX,
+          top: linkCoords.top + window.scrollY,
+          left: linkCoords.left + window.scrollX,
         };
         highlight.style.width = `${coords.width}px`;
         highlight.style.height = `${coords.height}px`;
